# ai-agent-security-testing

./: .gitignore  Dockerfile  README.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentsec/: __init__.py  cli.py  models.py  reports.py  scanner.py
agentsec/attacks/: __init__.py  base.py  data_exfiltration.py  indirect_injection.py  jailbreak.py  prompt_injection.py  ssrf.py  tool_abuse.py
agentsec/mcp/: __init__.py  server.py
src/ai_agent_security_testing/: __init__.py  cli.py  core.py
tests/: test_agentsec.py  test_core.py
