[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsec"
version = "0.1.0"
description = "AI Agent Security Testing Framework — red-team AI agents with automated attack scenarios"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Phoenix Assistant", email = "phoenix@example.com"}]
keywords = ["ai", "security", "red-team", "llm", "agent", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "jinja2>=3.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "build"]

[project.scripts]
agentsec = "agentsec.cli:main"

[tool.setuptools.packages.find]
include = ["agentsec*"]
