[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-security-testing"
version = "0.1.0"
description = "Red-team testing infrastructure using AI agents for security assessment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Phoenix Assistant"}]
keywords = ["security","red-team","agents","testing","pentesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
ai-agent-security-testing = "ai_agent_security_testing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
